tests/NormalTests/paczka1/fuzzy1/43408277.err
Error in line 13: A81( S(5 190,9
Error in line 2: A812 S25 68,9
Error in line 17: puRp4ni4w S120 98,6
Error in line 35: j8y S25 90,9
